objects/report_sender__Custom_Template__c.object
<CustomObject>
    <fields>
        <fullName>report_sender__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Custom templates</relationshipLabel>
        <relationshipName>Custom_templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report_sender__sx__c</fullName>
        <formula>SUBSTITUTE(TEXT(DATEVALUE(now())),&apos;/&apos;,&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sxczx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__time_now__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>time now</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>report_sender__zsx__c</fullName>
        <formula>DATEVALUE(now())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zsx</label>
        <type>Date</type>
    </fields>
    <label>Custom Template</label>
    <listViews>
        <fullName>report_sender__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>